# 3d_recognizer

./: .gitignore  Dockerfile  README.md  arm64.Dockerfile  dataset.py  main.py  main_segmentation.py  predict.py  realsense_camera.py  requirements.txt  run_in_docker  train.py
camera/: __init__.py  base_camera.py  mock_camera.py  realsense_camera.py
data/mock/: 2022_07_29__09_32_07_088822000_data.npy  2022_07_29__09_33_49_579230000_data.npy  2022_07_29__09_38_51_391554000_data.npy  2022_07_29__14_15_36_850990000_data.npy  2022_07_29__14_16_09_246949000_data.npy  2022_07_29__14_17_16_334464000_data.npy  2022_07_29__14_21_17_981610000_data.npy  2022_07_29__14_23_22_914586000_data.npy  2022_07_29__14_24_44_755482000_data.npy  2022_07_29__14_25_23_872068000_data.npy  2022_07_29__14_27_21_080068000_data.npy  2022_07_29__14_28_33_365740000_data.npy  2022_07_29__14_31_21_260314000_data.npy  2022_07_29__14_32_56_873029000_data.npy  2022_07_29__14_33_09_964909000_data.npy
randlanet/: CMakeLists.txt  Makefile  README.md  __init__.py  cmake_install.cmake  model.py
randlanet/utils/: LICENSE  augmentation.py  dataset.py  early_stopper.py  knn.py  losses.py  metrics.py  modules.py  preprocessing.py  trainer.py
randlanet/utils/src/: bindings.cpp  cloud.h  knn.cpp  knn.h  nanoflann.hpp  neighbors.h
ui/: __init__.py  data_capturing_frame.py  label.py  prediction_frame.py  train_frame.py  vispy_canvas.py  vispy_view.py
